<resources>
    <string name="app_name">Mental Health Wellness</string>
    <string name="mon_button_text">Mon</string>
    <string name="tue_button_text">Tue</string>
    <string name="wed_button_text">Wed</string>
    <string name="thu_button_text">Thu</string>
    <string name="fri_button_text">Fri</string>
    <string name="sat_button_text">Sat</string>
    <string name="sun_button_text">Sun</string>

    <string name="title_home">Home</string>
    <string name="title_calendar">Calendar</string>
    <string name="title_habit_tracking">Habits</string>
    <string name="title_screen_time">Screen Time</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="stats">Stats</string>

    <string name="habit_hint_desc">Description</string>
    <string name="habit_hint_freq">Frequency</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_submit">Submit</string>
    <string name="add_habit_title">Enter Habit</string>
    <string name="empty_error">Field cannot be empty</string>
    <string name="freq_error">Frequency must be between 1 and 7</string>
</resources>