<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/home"
        android:enabled="true"
        android:icon="@drawable/ic_home"
        android:title="@string/title_home"/>

    <item
        android:id="@+id/calendar"
        android:enabled="true"
        android:icon="@drawable/ic_calendar"
        android:title="@string/title_calendar" />

    <item
        android:id="@+id/habit"
        android:enabled="true"
        android:icon="@drawable/ic_goal"
        android:title="@string/title_habit_tracking"/>

    <item
        android:id="@+id/screentime"
        android:enabled="true"
        android:icon="@android:drawable/ic_menu_recent_history"
        android:title="@string/title_screen_time" />
</menu>