<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@drawable/border">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_weight="1"
            android:id="@+id/description_text"
            android:padding="2dp"
            android:textColor="#000000"
            android:textSize="18sp"
            android:textStyle="bold"
            android:gravity="left"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:maxLength="20"
            />
        <ImageButton
            android:id="@+id/delete"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_gravity="right"
            android:layout_marginLeft="160dp"
            android:src="@drawable/deletehabit"
             />
    </LinearLayout>



    <LinearLayout
        android:id="@+id/days"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ToggleButton
            android:id="@+id/toggle_mon"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:textOff="@string/mon_button_text"
            android:textOn="@string/mon_button_text"
            android:textSize="10sp"/>

        <ToggleButton
            android:id="@+id/toggle_tue"
            android:layout_height="match_parent"
            android:layout_width="0dp"
            android:textOff="@string/tue_button_text"
            android:textOn="@string/tue_button_text"
            android:textSize="10sp"
            android:layout_weight="1"/>

        <ToggleButton
            android:id="@+id/toggle_wed"
            android:layout_height="match_parent"
            android:textOff="@string/wed_button_text"
            android:textOn="@string/wed_button_text"
            android:textSize="10sp"
            android:layout_weight="1"
            android:layout_width="0dp"/>

        <ToggleButton
            android:id="@+id/toggle_thu"
            android:layout_height="match_parent"
            android:textOff="@string/thu_button_text"
            android:textOn="@string/thu_button_text"
            android:layout_weight="1"
            android:textSize="10sp"
            android:layout_width="0dp" />

        <ToggleButton
            android:id="@+id/toggle_fri"
            android:layout_height="match_parent"
            android:textOff="@string/fri_button_text"
            android:textOn="@string/fri_button_text"
            android:textSize="10sp"
            android:layout_width="0dp"
            android:layout_weight="1" />

        <ToggleButton
            android:id="@+id/toggle_sat"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textOff="@string/sat_button_text"
            android:textOn="@string/sat_button_text"
            android:textSize="10sp"
            android:layout_width="0dp"/>

        <ToggleButton
            android:id="@+id/toggle_sun"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textOff="@string/sun_button_text"
            android:textOn="@string/sun_button_text"
            android:textSize="10sp"
            android:layout_width="0dp"/>
    </LinearLayout>
</LinearLayout>
